Cambiando manejo para que sea con ID